force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Administrative_fee__c.field-meta.xml
<CustomField>
    <fullName>APT_Administrative_fee__c</fullName>
    <formula>IF( ISPICKVAL( APT_Domestic_Customer__c , &quot;Yes&quot;) ,&quot;N/A&quot;,&quot;$&quot;&amp;TEXT(45.45))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrative fee</label>
    <type>Text</type>
</CustomField>