force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_AirmailSmallParcelGT2kgAVGWeightKG__c.field-meta.xml
<CustomField>
    <fullName>APT_AirmailSmallParcelGT2kgAVGWeightKG__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Airmail Small Parcel &gt;2kg AVG Weight(KG) for Estimated Revenue Calculation</description>
    <label>Airmail Parcels &gt;2kg Avg. Weight (Kgs)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>