force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Code__c</fullName>
    <formula>TEXT(APT_Charge_Code_C1__c) + &apos;&apos; + TEXT(APT_Charge_Code_C2__c) + &apos;&apos; + TEXT(APT_Charge_Code_C3__c) + &apos;&apos; + TEXT(APT_Charge_Code_C4__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Code</label>
    <type>Text</type>
</CustomField>