force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>APT_Customer_Tier__c</fullName>
    <inlineHelpText>Customers who spend more with Australia Post will have access to lower prices. Access to Tier 9+ will require approval by Pricing. 
Value (ex Gst) 
TIER 1: $2.5K - $4.99K 
TIER 2: $5K - $9.99K 
TIER 3: $10K - $19.99K 
TIER 4 = $20K - $49.99K 
TIER 5 = $50K - $124.99K 
TIER 6 = $125K - $249.99K 
TIER 7 = $250K - $499.99K 
TIER 8 = $500K - $999.99K 
TIER 9 = $1M - $2.49M 
TIER 10 = $2.5M - $4M 
TIER 11 = $5M - $9.99M 
TIER 12 = $10M - $19.99M 
TIER 13 = $20M - $39.99M 
TIER 14 = $40M +</inlineHelpText>
    <label>Tier (ex GST)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APT_Customer_Tier</valueSetName>
    </valueSet>
</CustomField>