force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Distribution_Type_Printpost__c.field-meta.xml
<CustomField>
    <fullName>APT_Distribution_Type_Printpost__c</fullName>
    <label>Distribution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Sort Division</fullName>
            </value>
            <value>
                <fullName>Same State Metro</fullName>
            </value>
            <value>
                <fullName>Same State Country</fullName>
            </value>
            <value>
                <fullName>Other State</fullName>
            </value>
            <value>
                <fullName>Large Postcode Direct</fullName>
            </value>
            <value>
                <fullName>Small Postcode Direct</fullName>
            </value>
            <value>
                <fullName>Residue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>