force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Domestic_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Domestic_Price_Type__c</fullName>
    <label>Domestic Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Subsequent</fullName>
            </value>
            <value>
                <fullName>Per Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>