force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_ECI_Documents_AVG_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>APT_ECI_Documents_AVG_Weight_KG__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ECI Documents AVG Weight(KG) for Estimated Revenue Calculation</description>
    <label>ECI Docs &lt;2kg Avg. Weight (Kgs)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>