force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_eParcel_Lodgment__c.field-meta.xml
<CustomField>
    <fullName>APT_eParcel_Lodgment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>eParcel Lodgment for Estimated Revenue Calculation</description>
    <label>Digital</label>
    <type>Checkbox</type>
</CustomField>