force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_From_Instructions__c.field-meta.xml
<CustomField>
    <fullName>APT_From_Instructions__c</fullName>
    <label>Instructions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>