force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Inbound_Outbound__c.field-meta.xml
<CustomField>
    <fullName>APT_Inbound_Outbound__c</fullName>
    <description>To be used for startrack price dimension</description>
    <label>Inbound - Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>