force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Industry__c.field-meta.xml
<CustomField>
    <fullName>APT_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture, Forestry and Fishing</fullName>
            </value>
            <value>
                <fullName>Construction Services</fullName>
            </value>
            <value>
                <fullName>Financial and Insurance Services</fullName>
            </value>
            <value>
                <fullName>Government and Community</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Professional and Administrative Services</fullName>
            </value>
            <value>
                <fullName>Recreation and Entertainment</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Telecommunications and Media</fullName>
            </value>
            <value>
                <fullName>Transport, Logistics and Warehousing</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>