force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Int_Express_Document_Volume__c.field-meta.xml
<CustomField>
    <fullName>APT_Int_Express_Document_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>International Express Documents Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>