force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_International_Letters__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Letters__c</fullName>
    <defaultValue>true</defaultValue>
    <description>International Letters for Estimated Revenue Calculation</description>
    <label>Non-Digital</label>
    <type>Checkbox</type>
</CustomField>