force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_International_Std_W_Sig_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Std_W_Sig_Weight_Kgs__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>International Std with Sig Weight &lt; 20kg</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>