force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_KG_Rate__c.field-meta.xml
<CustomField>
    <fullName>APT_KG_Rate__c</fullName>
    <label>KG Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>