force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Lodgement_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Zone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lodgement Zone</label>
    <referenceTo>APT_Lodgement_Zone__c</referenceTo>
    <relationshipLabel>Product Attribute Values</relationshipLabel>
    <relationshipName>Product_Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>