force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Lodgement_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Zone_Code__c</fullName>
    <formula>APT_Lodgement_Zone__r.APT_Lodgement_Zone_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lodgement Zone Code</label>
    <type>Text</type>
</CustomField>