force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Lodgment_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgment_Zone__c</fullName>
    <description>Test Field</description>
    <inlineHelpText>test help text</inlineHelpText>
    <label>Lodgment Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>