force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_LPD_Collection_Address_From_2__c.field-meta.xml
<CustomField>
    <fullName>APT_LPD_Collection_Address_From_2__c</fullName>
    <description>Collection Address To is used to capture collection address for &apos;Pickup Service&apos; Service Type.
This is used for &apos;Local Pickup and Delivery Services&apos; product only.</description>
    <label>From Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>