force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_LPD_Total_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>APT_LPD_Total_Service_Fee__c</fullName>
    <description>Total Service Fee is the Final cost of a &apos;Local Pickup and Delivery Services&apos; Product.
It is the sum of three different criteria&apos;s cost including Service Type Fee, Distance Fee and Ad Hoc Service Fee.

This field is used in the after insert/update trigger(Apt_RateCardKeyTrigger) for Line Item object, 
to overwrite Apttus&apos; NetPrice field with this field&apos;s value as part of pricing customisation for &apos;Local Pickup and Delivery Services&apos; Product.</description>
    <formula>APT_LPD_Service_Type_Fee__c + APT_LPD_Distance_Surcharge__c + APT_LPD_Ad_Hoc_Service_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>