force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Min_Transit_Cover_Amount_Per_Article__c.field-meta.xml
<CustomField>
    <fullName>APT_Min_Transit_Cover_Amount_Per_Article__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Transit cover can be applied to all parcels sent by entering the $ value of cover. Where the value is $0 or Blank, this indicates that there is no default cover.</inlineHelpText>
    <label>Min Transit Cover Amount Per Article</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>