force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Minimum_Charge__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Charge__c</fullName>
    <label>Minimum Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>