force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>APT_Monthly_Spend__c</fullName>
    <inlineHelpText>Total monthly spend across all ST products</inlineHelpText>
    <label>Monthly Spend</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>