force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Pickup_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Pickup_Zone_Code__c</fullName>
    <description>To be used for startrack price dimension</description>
    <label>Pickup Zone Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>