force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Post_Code_Suburb__c.field-meta.xml
<CustomField>
    <fullName>APT_Post_Code_Suburb__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>lookup to postcode mapping table for star track</description>
    <inlineHelpText>Leave it blank if this product line is for your primary pickup location. Only complete this postcode selection for additional product line in shopping cart (i.e additional depot required)</inlineHelpText>
    <label>Postcode - Suburb</label>
    <referenceTo>APT_Post_Code_Mapping__c</referenceTo>
    <relationshipLabel>Product Attribute Values</relationshipLabel>
    <relationshipName>Product_Attribute_Values</relationshipName>
    <type>Lookup</type>
</CustomField>