force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_PostBillPay_Gross_Settlement_fee__c.field-meta.xml
<CustomField>
    <fullName>APT_PostBillPay_Gross_Settlement_fee__c</fullName>
    <label>Gross Settlement Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>