force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_PostBillPay_Volume_threshold__c.field-meta.xml
<CustomField>
    <fullName>APT_PostBillPay_Volume_threshold__c</fullName>
    <label>Annual Volume Review</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 – 25,000</fullName>
            </value>
            <value>
                <fullName>25,001 – 100,000</fullName>
            </value>
            <value>
                <fullName>100,001 – 500,000</fullName>
            </value>
            <value>
                <fullName>500,001 – 1,500,000</fullName>
            </value>
            <value>
                <fullName>1,500,001 – 3,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>