force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Postcode__c.field-meta.xml
<CustomField>
    <fullName>APT_Postcode__c</fullName>
    <label>Lodgement Postcode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>