force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Price_Type__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Subsequent</fullName>
            </value>
            <value>
                <fullName>Per Kg</fullName>
            </value>
            <value>
                <fullName>1 KG</fullName>
            </value>
            <value>
                <fullName>3 KG</fullName>
            </value>
            <value>
                <fullName>5 KG</fullName>
            </value>
            <value>
                <fullName>10 KG</fullName>
            </value>
            <value>
                <fullName>20 KG</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>