force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_Type__c</fullName>
    <formula>IF((APT_Returns_of_Total_Annual_Volume__c) &gt; 0.4, &apos;EPR1&apos;, &apos;EPR2&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>