force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Recommended_Pricing_Action__c.field-meta.xml
<CustomField>
    <fullName>APT_Recommended_Pricing_Action__c</fullName>
    <label>Recommended Pricing Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>