force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Returns_of_Total_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>APT_Returns_of_Total_Annual_Volume__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Returns % of Total Annual Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>