force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_RK_Code_Applied__c.field-meta.xml
<CustomField>
    <fullName>APT_RK_Code_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when Attributes are updated from RK Code response this field is made true</description>
    <label>RK Code Applied</label>
    <type>Checkbox</type>
</CustomField>