force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_StarTrack_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_StarTrack_Service_Type__c</fullName>
    <description>Service type for star track products</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXP</fullName>
            </value>
            <value>
                <fullName>FPP</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>RE2</fullName>
            </value>
            <value>
                <fullName>SE3</fullName>
            </value>
            <value>
                <fullName>NXF</fullName>
            </value>
            <value>
                <fullName>SE2</fullName>
                <isActive>false</isActive>
                <label>SE2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>