force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_To_Address_State__c.field-meta.xml
<CustomField>
    <fullName>APT_To_Address_State__c</fullName>
    <label>Address State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>