force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Up_to_500g_Rate__c.field-meta.xml
<CustomField>
    <fullName>APT_Up_to_500g_Rate__c</fullName>
    <description>May 23 - REQ3186685 - pricing update - updated from 7.78, 10.71
Aug 22 - REQ2931039 - pricing update - updated from 7.2, 9.92</description>
    <formula>IF( Apttus_Config2__LineItemId__r.Apttus_Config2__ProductId__r.ProductCode == &apos;eParcelStandard&apos;, 8.40, 11.56)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up to 500g Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>