force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Volume__c.field-meta.xml
<CustomField>
    <fullName>APT_Volume__c</fullName>
    <label>Volume</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Min 100 of each title per lodgment point</fullName>
            </value>
            <value>
                <fullName>Min of 2 annual lodgments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>