force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Weight_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Weight_Code__c</fullName>
    <label>Weight Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>62.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>