force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Weight_Range_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Weight_Range_Code__c</fullName>
    <label>Weight Range Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>