force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APT_Zone_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone_Type__c</fullName>
    <description>Zone type to be used for startrack price dimension</description>
    <label>Zone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Onforwarding</fullName>
            </value>
            <value>
                <fullName>Onforwarding Alternate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>