force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/APTS_Price_Structure__c.field-meta.xml
<CustomField>
    <fullName>APTS_Price_Structure__c</fullName>
    <inlineHelpText>Pricing organised into partitions according to where parcels are being sent – these are referred to as “destination zone” structures.</inlineHelpText>
    <label>Price Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASE+PER_KG {Z30}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z30}</fullName>
            </value>
            <value>
                <fullName>WINE {Z30}</fullName>
            </value>
            <value>
                <fullName>BANDED SPECIAL EXPRESS {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z40}</fullName>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z6}</fullName>
            </value>
            <value>
                <fullName>BANDED WINE {Z40}</fullName>
            </value>
            <value>
                <fullName>BANDED {Z60}</fullName>
            </value>
            <value>
                <fullName>Z003</fullName>
                <label>Z3</label>
            </value>
            <value>
                <fullName>Z006</fullName>
                <label>Z6</label>
            </value>
            <value>
                <fullName>Z009</fullName>
                <label>Z9</label>
            </value>
            <value>
                <fullName>Z060</fullName>
                <label>Z60</label>
            </value>
            <value>
                <fullName>Z001</fullName>
                <label>Z1</label>
            </value>
            <value>
                <fullName>BANDED {Z3}</fullName>
                <isActive>false</isActive>
                <label>BANDED {Z3}</label>
            </value>
            <value>
                <fullName>BANDED {Z9}</fullName>
                <isActive>false</isActive>
                <label>BANDED {Z9}</label>
            </value>
            <value>
                <fullName>BASE+PER_KG {Z20}</fullName>
                <isActive>false</isActive>
                <label>BASE+PER_KG {Z20}</label>
            </value>
            <value>
                <fullName>CUSTOM {Z30}</fullName>
                <isActive>false</isActive>
                <label>CUSTOM {Z30}</label>
            </value>
            <value>
                <fullName>CUSTOM {Z40}</fullName>
                <isActive>false</isActive>
                <label>CUSTOM {Z40}</label>
            </value>
            <value>
                <fullName>TEST</fullName>
                <isActive>false</isActive>
                <label>TEST</label>
            </value>
            <value>
                <fullName>[EPARCEL] BASE+PER_KG {Z30}</fullName>
                <isActive>false</isActive>
                <label>[EPARCEL] BASE+PER_KG {Z30}</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>