force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAT1</fullName>
            </value>
            <value>
                <fullName>CAT2</fullName>
            </value>
            <value>
                <fullName>CAT3</fullName>
            </value>
            <value>
                <fullName>CAT4</fullName>
            </value>
            <value>
                <fullName>CAT5</fullName>
            </value>
            <value>
                <fullName>CAT6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>