force-app/main/default/objects/Apttus_Config2__ProductAttributeValue__c/fields/Weight_Range__c.field-meta.xml
<CustomField>
    <fullName>Weight_Range__c</fullName>
    <label>Weight Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>up to 500g</fullName>
            </value>
            <value>
                <fullName>over 500g up to 1kg</fullName>
            </value>
            <value>
                <fullName>over 1kg up to 2kg</fullName>
            </value>
            <value>
                <fullName>up to 2kg</fullName>
            </value>
            <value>
                <fullName>over 2kg up to 20kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>